# blase

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
blase/: __init__.py  clean.py  deploy.py  evaluate.py  examine.py  extract.py  load.py  monitor.py  pipeline.py  prepare.py  simulate.py  track.py  train.py  transform.py  update.py
blase/cli/: cli.py
blase/cli/templates/pipeline/: main.py
blase/extracting/: csv_backend.py
blase/test/fixtures/data/cats-and-dogs-id/: LICENSE-CITATION.txt
blase/test/fixtures/data/hourly_exchange_rates/: fx_classify_raw_data.db
blase/test/fixtures/data/house-rent-prediction/: Acknowledgement.txt
blase/tests/fixtures/data/NASA-bearing-dataset/: LICENSE-SOURCE.txt
blase/tests/fixtures/data/chest_x_ray_pneumonia/: LICENSE-CITATION.txt
blase/tests/fixtures/data/defect-phone/: LICENSE-SOURCE.txt
blase/tests/fixtures/data/diabetes+130-us+hospitals+for+years+1999-2008/: Source.txt
blase/tests/fixtures/data/fine-tune-balcones_train/: LICENSE  README.md  clean_raw_data.py  create_features.py  create_targets.py  dp_config.py  eval_config.py  evaluate.py  fx_classify_create_dummy_data_db.py  fx_classify_custom_eval_funcs.py  fx_classify_custom_train_funcs.py  fx_classify_data_preparation.py  train.py  (+19 more)
blase/tests/unit/extract/: test_extract.py
blase/tests/unit/utils/: test_backends.py
blase/utils/: backends.py  hashing.py  logger.py  performance.py
docs/: installation.md  working_example_dev.md
docs/contributor_guides/: architecture.md  roadmap.md
(+3 files in other folders)
